--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -494,5 +494,25 @@ footer {
     background: #fff;
 }
 
+.breadcrumb-custom {
+    padding: 20px 0px;
+}
+
+.breadcrumb-custom a {
+    color: #666;
+    text-decoration: none;
+}
+
+.breadcrumb-custom a:hover {
+    color: #00b14f;
+    text-decoration: none;
+}
+
+.bg-job-count {
+    margin-bottom: 20px;
+    padding: 10px 20px;
+    background-color: #fff;
+}
+
 
 /* End Home */
