--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,3 +128,22 @@
         font-size: 25px;
     }
     /* End Job css */
+    /* Job Detail */
+    
+    .nav-job-detail a {
+        padding: 10px 15px;
+        margin-right: 80px;
+    }
+    
+    .nav-custom-job-detail a:hover {
+        border-bottom: 1px solid #666;
+    }
+    
+    .box-report a {
+        color: #666;
+    }
+    
+    .box-report a:hover {
+        color: #00b14f;
+    }
+    /* End Job Detail */
