--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,8 +42,6 @@
         font-size: 14px;
         height: 60px;
         word-spacing: 1px;
-        padding-left: 12px !important;
-        padding-right: 12px !important;
         padding-top: 20px;
         white-space: nowrap;
     }
@@ -145,5 +143,23 @@
     
     .box-report a:hover {
         color: #00b14f;
+    }
+    
+    .right-desc-job {
+        border: 1px solid #ccc;
+        margin-bottom: 20px;
+    }
+    
+    .job-info-item {
+        padding: 15px;
+        border-bottom: 1px solid #666;
+    }
+    
+    .related-job {
+        border: 1px solid #ccc;
+    }
+    
+    .suggest-jobs-slick img {
+        max-height: 200px;
     }
     /* End Job Detail */
